samples/_failures_safe/1761503688_5deec4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2f2fc3a.c: In function ‘main’:
./samples/SAFE/__tmp_e2f2fc3a.c:139:13: error: expected declaration or statement at end of input
  139 |             printf("Message cannot be empty\n");
      |             ^~~~~~
./samples/SAFE/__tmp_e2f2fc3a.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2f2fc3a.c:139:13: error: expected declaration or statement at end of input
